--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -5,3 +5,48 @@
 .md-status--draft::after {
   mask-image: var(--md-status--draft);
 }
+
+.md-grid {
+  max-width: 70rem;
+}
+
+/* Font sizes */
+
+html {
+  /* Decrease font size for overall webpage */
+  font-size: 110%;
+}
+
+.md-typeset .admonition {
+  /* Increase font size in admonitions */
+  font-size: 100% !important;
+}
+
+.md-typeset details {
+  /* Increase font size in details */
+  font-size: 100% !important;
+}
+
+.md-typeset h1 {
+  font-size: 1.6rem;
+}
+
+.md-typeset h2 {
+  font-size: 1.5rem;
+}
+
+.md-typeset h3 {
+  font-size: 1.3rem;
+}
+
+.md-typeset h4 {
+  font-size: 1.1rem;
+}
+
+.md-typeset h5 {
+  font-size: 0.9rem;
+}
+
+.md-typeset h6 {
+  font-size: 0.8rem;
+}
